infra/k8s/auth.yaml
# ---------------------------------
# Postgres Deployment
# ---------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: auth-postgres-data
      volumes:
        - name: auth-postgres-data
          persistentVolumeClaim:
            claimName: auth-pvc

---
# ---------------------------------
# Postgres Service
# ---------------------------------
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-svc
spec:
  type: ClusterIP
  selector:
    app: auth-postgres
  ports:
    - port: 5432
      targetPort: 5432

---
# ---------------------------------
# App Deployment
# ---------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: auth-app
          image: auth-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
# ---------------------------------
# App Service
# ---------------------------------
apiVersion: v1
kind: Service
metadata:
  name: auth-app-svc
spec:
  type: ClusterIP
  selector:
    app: auth-app
  ports:
    - port: 8080
      targetPort: 8080
