infra/k8s/game.yaml
# ---------------------------------
# Postgres Deployment
# ---------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-postgres
  template:
    metadata:
      labels:
        app: game-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: game-postgres-data
      volumes:
        - name: game-postgres-data
          persistentVolumeClaim:
            claimName: game-pvc

---
# ---------------------------------
# Postgres Service
# ---------------------------------
apiVersion: v1
kind: Service
metadata:
  name: game-postgres-svc
spec:
  type: ClusterIP
  selector:
    app: game-postgres
  ports:
    - port: 5432
      targetPort: 5432

---
# ---------------------------------
# App Deployment
# ---------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-app
  template:
    metadata:
      labels:
        app: game-app
    spec:
      containers:
        - name: game-app
          image: game-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
# ---------------------------------
# App Service
# ---------------------------------
apiVersion: v1
kind: Service
metadata:
  name: game-app-svc
spec:
  type: ClusterIP
  selector:
    app: game-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
